--- a/public/index.html
+++ b/public/index.html
@@ -116,7 +116,7 @@ data-mobile="http://mobile.search.abc.net.au/s/search.html?collection=abcall_met
 
 <div class="embed-fragment" data-cmid="8834750"><div class="init-interactive"
 data-north-korea-missile-map-root
-data-scripts="http://jb-mac.aus.aunty.abc.net.au:8000/index.js" 
+data-scripts="/index.js" 
 data-no-support-msg="true"
 ></div>
 </div>
@@ -128,6 +128,16 @@ data-no-support-msg="true"
 <a name="markIDtwo"> </a><p>When the start of each section scrolls past the bottom of the viewport, a new event is fired on the background element (which can then bubble up the DOM, so you can listen for it anywhere).</p>
 
 <a name="markIDthree"> </a><p>This is the 3rd mark that does something else.</p>
+
+<a name="markIDfour"> </a><p>Another mark</p>
+
+<a name="markIDfive"> </a><p>Another mark</p>
+
+<a name="markIDsix"> </a><p>Another mark</p>
+
+<a name="markIDseven"> </a><p>Another mark</p>
+
+<a name="markIDeight"> </a><p>Here is Australia!</p>
 
 <a name="endscrollyteller"> </a><p>You can then carry on your story after the scrollytelling section.</p>
 
