--- a/public/index.html
+++ b/public/index.html
@@ -139,7 +139,9 @@ data-no-support-msg="true"
 
 <a name="markIDeight"> </a><p>Here is Australia!</p>
 
-<a name="endscrollyteller"> </a><p>You can then carry on your story after the scrollytelling section.</p>
+<a name="endscrollyteller"> </a>
+
+<p>You can then carry on your story after the scrollytelling section.</p>
 
 <div class="embed-fragment" data-cmid="8268602">
     
