--- a/public/index.html
+++ b/public/index.html
@@ -106,7 +106,7 @@ data-mobile="http://mobile.search.abc.net.au/s/search.html?collection=abcall_met
           Wed 23 Aug 2017, 2:05 PM AEST</time>
   </header>
 <div class="story richtext">
-    <p>Below we will have a look at a map of the world and see just how far North Korean missile can reach around the globe. Scary stuff!</p>
+    <p>Below we will have a look at a map of the world and see just how far North Korean missiles can reach around the globe. Scary stuff!</p>
 
     <!-- <div style="background: aquamarine; position: sticky; top: 0; z-index: 9999">test</div> -->
     
@@ -121,27 +121,30 @@ data-no-support-msg="true"
 ></div>
 </div>
 
-<p>A first paragraph of the scrollytelling experience.</p>
+<p>This is the current area that can be reached by North Korea's longest range intercontinental ballistic missile.</p>
 
-<a name="markIDone"> </a><p>A second section. These sections can be broken into multiple paragraphs and are divided by the '#mark' anchors.</p><p>The '#mark' anchors also act as waypoints for which Odyssey Scrollyteller will create events.</p>
+<a name="markIDone"> </a>
+<p>As you can see the top part of Australia is in range.</p>
 
-<a name="markIDtwo"> </a><p>When the start of each section scrolls past the bottom of the viewport, a new event is fired on the background element (which can then bubble up the DOM, so you can listen for it anywhere).</p>
+<a name="markIDtwo"> </a>
+<p>Most of Alaska is also currently in range</p>
 
-<a name="markIDthree"> </a><p>This is the 3rd mark that does something else.</p>
+<a name="markIDthree"> </a>
+<p>How long until North Korea builds a missile with a longer range?</p>
 
-<a name="markIDfour"> </a><p>Another mark</p>
+<!--<a name="markIDfour"> </a>
 
-<a name="markIDfive"> </a><p>Another mark</p>
+ <a name="markIDfive"> </a><p>Another mark</p>
 
 <a name="markIDsix"> </a><p>Another mark</p>
 
 <a name="markIDseven"> </a><p>Another mark</p>
 
-<a name="markIDeight"> </a><p>Here is Australia!</p>
+<a name="markIDeight"> </a><p>Here is Australia!</p> -->
 
 <a name="endscrollyteller"> </a>
 
-<p>You can then carry on your story after the scrollytelling section.</p>
+<p>That's the end of the story... for now. We can talk more about missile ranges etc here and display the end credits.</p>
 
 <div class="embed-fragment" data-cmid="8268602">
     
