Loading geojson from data url

--- a/public/index.html
+++ b/public/index.html
@@ -108,17 +108,16 @@ data-mobile="http://mobile.search.abc.net.au/s/search.html?collection=abcall_met
 <div class="story richtext">
     <p>Below we will have a look at a map of the world and see just how far North Korean missiles can reach around the globe. Scary stuff!</p>
 
-    <!-- <div style="background: aquamarine; position: sticky; top: 0; z-index: 9999">test</div> -->
-    
+
     <a name="scrollyteller"> </a>
 
-    
 
-<div class="embed-fragment" data-cmid="8834750"><div class="init-interactive"
-data-north-korea-missile-map-root
-data-scripts="/index.js" 
-data-no-support-msg="true"
-></div>
+<div class="embed-fragment" data-cmid="8834750">
+    <div class="init-interactive"
+    data-north-korea-missile-map-root
+    data-scripts="/index.js" 
+    data-no-support-msg="true"
+    ></div>
 </div>
 
 <p>This is the current area that can be reached by North Korea's longest range intercontinental ballistic missile.</p>
@@ -214,18 +213,10 @@ data-no-support-msg="true"
 
 
 
-
-
-
-
-
 </a></article>
 <article >
   <a href="/news/mobile/2017-08-23/stan-grant:-damaging-myth-captain-cook-discovered-australia/8833536"><h3>
       Stan Grant: It is a &#039;damaging myth&#039; that Captain Cook discovered Australia</h3>
-
-
-
 
 
 
@@ -261,15 +252,10 @@ data-no-support-msg="true"
 
 
 
-
-
-
 </a></article>
 <article >
   <a href="/news/mobile/2017-08-23/same-sex-marriage-what-bible-has-to-say-robyn-whitaker/8831826"><h3>
       What does the Bible really say about same-sex marriage?</h3>
-
-
 
 
 
@@ -292,15 +278,10 @@ data-no-support-msg="true"
 
 
 
-
-
 </a></article>
 <article >
   <a href="/news/mobile/2017-08-23/prince-frederik-jade-buddha-police-commissioner-ian-stewart/8834242"><h3>
       Police Commissioner apologises after law breach for Prince Frederik</h3>
-
-
-
 
 
 
@@ -322,8 +303,6 @@ data-no-support-msg="true"
 
 
 
-
-
 </a></article>
 <article >
   <a href="/news/mobile/2017-08-23/more-of-us-could-work-part-time-if-roles-were-better-designed/8834100"><h3>
@@ -336,16 +315,10 @@ data-no-support-msg="true"
 
 
 
-
-
-
 </a></article>
 <article >
   <a href="/news/mobile/2017-08-23/senior-politicians-rush-to-disclose-free-foxtel-subscriptions/8832532"><h3>
       Senior politicians rush to disclose free Foxtel subscriptions amid uncertainty </h3>
-
-
-
 
 
 
