High DPI Monitor support

--- a/public/abc-mobile.html
+++ b/public/abc-mobile.html
@@ -110,7 +110,7 @@ data-mobile="http://mobile.search.abc.net.au/s/search.html?collection=abcall_met
 data-north-korea-missile-range-root
 data-scripts="./index.js"
 data-no-support-msg="true" 
-data-geojson="/world-data/world-simple.topo.json"
+data-geojson="./world-data/world-simple.topo.json"
 data-storydata="./story-data.json"
 ></div>
 </div><p> </p><p>North Korea's has been building intercontinental ballistic missiles which can be loaded with nuclear warheads. In the past the missiles have been limited in range. But this is changing recently.</p><a name="markIDbrisbaneRANGE6700"> </a><p>As you can see now the top part of Australia is in range.</p><a name="markIDalaskaRANGE6700"> </a><p>Most of Alaska is also currently in range.</p><a name="markIDbrisbaneRANGE8000"> </a><p>How long until North Korea builds a missile with a longer range?</p><a name="markIDpyongyangRANGE400"> </a><p>Can we drastically reduce North Korea's military arsenal?</p><a name="endscrollyteller"> </a><p>That's the end of the story... for now. We can talk more about missile ranges etc here and display the end credits.</p><div class="embed-fragment" data-cmid="8268602"><div class="init-interactive" data-no-support-msg="true" data-scripts="http://www.abc.net.au/res/sites/news-projects/odyssey/2.4.1/index.js"></div>
